@@ -15,6 +15,8 @@ Version 1.0.0-dev
 
 Not yet released.
 
+- #363 (partial solution): don't use ``COUNT`` on requests that don't require
+  pagination.
 - #404: **Major overhaul of Flask-Restless to support JSON API**.
 - Increases minimum version requirement for ``python-dateutil`` to be strictly
   greater than 2.2 to avoid parsing bug.
